--- a/STPPdataExplor.html
+++ b/STPPdataExplor.html
@@ -124,6 +124,12 @@ $(document).ready(function () {
 </div>
 
 
+<p>NOTE: Github doesn’t currently render the latex equations typed in ‘rmarkdown’ document. Therefore, in order to preview this document (with equations properly rendered), follow the below steps:</p>
+<ol style="list-style-type: decimal">
+<li>Click on the ‘DataExplorInR’ directory</li>
+<li>Click on the ‘STPPdataExplor.html’ file, and copy the GitHub URL</li>
+<li>Use this tool to preview it: <a href="http://htmlpreview.github.io/" class="uri">http://htmlpreview.github.io/</a> (credit to:Jennifer Bryan)</li>
+</ol>
 <div id="exercises" class="section level3">
 <h3>Exercises</h3>
 <ul>
