--- a/STPPdataExplor.html
+++ b/STPPdataExplor.html
@@ -135,7 +135,7 @@ $(document).ready(function () {
 <ul>
 <li>Definitions</li>
 <li>Exploring real (crime) point datasets</li>
-<li>Synthesising space-time point datasets</li>
+<li>Synthesising space-time point datasets (Go to: <a href="https://github.com/QuantCrimAtLeeds/DataSynth/tree/master/DataSynthUsingR">Repo. for Synthetic dataset</a> )</li>
 <li>Analysing the properties of the synthesised datasets</li>
 <li>Comparing the properties of real and synthesised datasets.
 <ul>
