--- a/STinteractionTest_in_R_KnoxTest.html
+++ b/STinteractionTest_in_R_KnoxTest.html
@@ -322,54 +322,7 @@ print(paste(&quot;time taken to fill cell:&quot;, tt-1,&quot;,&quot;, ss-1, &quo
     } #close temporal 
 
 } #close spatial</code></pre>
-<pre><code>## [1] &quot;time taken to fill cell: 1 , 1 : &quot;
-## Time difference of 7.024836 mins
-## [1] &quot;time taken to fill cell: 2 , 1 : &quot;
-## Time difference of 6.610524 mins
-## [1] &quot;time taken to fill cell: 3 , 1 : &quot;
-## Time difference of 6.628652 mins
-## [1] &quot;time taken to fill cell: 4 , 1 : &quot;
-## Time difference of 6.636197 mins
-## [1] &quot;time taken to fill cell: 5 , 1 : &quot;
-## Time difference of 6.533962 mins
-## [1] &quot;time taken to fill cell: 6 , 1 : &quot;
-## Time difference of 6.498955 mins
-## [1] &quot;time taken to fill cell: 1 , 2 : &quot;
-## Time difference of 6.488202 mins
-## [1] &quot;time taken to fill cell: 2 , 2 : &quot;
-## Time difference of 6.515042 mins
-## [1] &quot;time taken to fill cell: 3 , 2 : &quot;
-## Time difference of 6.520158 mins
-## [1] &quot;time taken to fill cell: 4 , 2 : &quot;
-## Time difference of 6.498824 mins
-## [1] &quot;time taken to fill cell: 5 , 2 : &quot;
-## Time difference of 6.479523 mins
-## [1] &quot;time taken to fill cell: 6 , 2 : &quot;
-## Time difference of 6.480163 mins
-## [1] &quot;time taken to fill cell: 1 , 3 : &quot;
-## Time difference of 6.473458 mins
-## [1] &quot;time taken to fill cell: 2 , 3 : &quot;
-## Time difference of 6.457524 mins
-## [1] &quot;time taken to fill cell: 3 , 3 : &quot;
-## Time difference of 6.476053 mins
-## [1] &quot;time taken to fill cell: 4 , 3 : &quot;
-## Time difference of 6.483052 mins
-## [1] &quot;time taken to fill cell: 5 , 3 : &quot;
-## Time difference of 6.470999 mins
-## [1] &quot;time taken to fill cell: 6 , 3 : &quot;
-## Time difference of 6.620518 mins
-## [1] &quot;time taken to fill cell: 1 , 4 : &quot;
-## Time difference of 6.631242 mins
-## [1] &quot;time taken to fill cell: 2 , 4 : &quot;
-## Time difference of 6.60593 mins
-## [1] &quot;time taken to fill cell: 3 , 4 : &quot;
-## Time difference of 6.536211 mins
-## [1] &quot;time taken to fill cell: 4 , 4 : &quot;
-## Time difference of 6.542379 mins
-## [1] &quot;time taken to fill cell: 5 , 4 : &quot;
-## Time difference of 6.515985 mins
-## [1] &quot;time taken to fill cell: 6 , 4 : &quot;
-## Time difference of 6.526041 mins</code></pre>
+<pre><code>## [1] It took approximately 6.526041 mins to fill each cell</code></pre>
 <pre class="r"><code>#the result
 print(result_Table)</code></pre>
 <pre><code>##     100-200 200-300 300-400 400-500
